fixed overflow issue

--- a/src/style.scss
+++ b/src/style.scss
@@ -32,3 +32,24 @@
 .js-vl-select.is-open, .vl-select__list--dropdown.is-active {
     z-index: 101;
 }
+
+.vl-select__item {
+    max-width: 100%;
+    padding: 0 1.4rem;
+
+    &[data-deletable] {
+        > span {
+            max-width: calc(100% - 3.5rem);
+        }
+    }
+
+    > span {
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+    }
+}
+
+.vl-pill__close {
+    margin-left: 1.4rem;
+}
